# claude-sessions

./: .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile.e2e  README.md  docker-compose.e2e.yml  index.html  package-lock.json  package.json  userstories.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: validate-applescript.sh
.github/workflows/: test.yml
convex/: auth.ts  http.ts  messages.ts  schema.ts  sessions.ts  sync.ts  todos.ts  users.ts
convex/_generated/: api.d.ts
e2e/: TESTS.md  docker-e2e.test.ts  runner.ts  tauri-e2e.test.ts  utils.ts  vitest.config.ts  webdriver.test.ts
e2e/helpers/: bridge-client.ts  database.ts  global-setup.ts  setup.ts  test-utils.ts
e2e/specs/: auth.spec.ts  comments.spec.ts  diff-viewer.spec.ts  headless-chat.spec.ts  inbox.spec.ts  permission-dialog.spec.ts  session-recovery.spec.ts  session.spec.ts  settings.spec.ts  sidebar.spec.ts  sync.spec.ts  workspace.spec.ts
notes/: 2025-12-12-side-panel-diff-and-e2e-testing.md  2025-12-13-lazy-terminal-sessions.md  2026-01-04-us-029-diff-fix.md  2026-01-05-us034-ai-scope-rehydrate.md  2026-01-05-us035-sdk-custom-tools-testing.md  2026-01-05-us036-tool-permissions.md
scripts/: mcp-bridge.cjs  start-session.sh
scripts/agent-service/: build-all.js  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_headless.rs  claude_sessions.rs  db.rs  git.rs  lib.rs  main.rs  permissions.rs  server.rs
src/components/: Inbox.tsx  (+14 more)
(+84 files in other folders)
