[package]
name = "claude-sessions"
version = "0.1.0"
description = "A desktop app for managing multiple Claude Code sessions"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_sessions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-pty = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.4.0"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server for MCP bridge
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.19"
dirs = "5"

